RESOLVED FIXED60457
[EFL] Added initialization/shutdown for ecore_file library
https://bugs.webkit.org/show_bug.cgi?id=60457
Summary [EFL] Added initialization/shutdown for ecore_file library
Tomasz Morawski
Reported 2011-05-09 00:25:45 PDT
Added initialization and shuthown fo ecore_file library and replaced realpath function to ecore_file_realpath.
Attachments
Patch (1.94 KB, patch)
2011-05-09 00:26 PDT, Tomasz Morawski
no flags
Fixed patch (2.08 KB, patch)
2011-05-09 05:53 PDT, Tomasz Morawski
no flags
Patch 3 (2.08 KB, patch)
2011-05-09 22:55 PDT, Tomasz Morawski
no flags
Patch 4 (deleted)
2011-05-11 01:05 PDT, Tomasz Morawski
no flags
Tomasz Morawski
Comment 1 2011-05-09 00:26:58 PDT
Lucas De Marchi
Comment 2 2011-05-09 04:47:52 PDT
Comment on attachment 92765 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=92765&action=review > Tools/ChangeLog:8 > + Added initialization and shuthown fo ecore_file library and replaced s/fo/for/ > Tools/EWebLauncher/main.c:802 > - rpath = realpath(theme, NULL); > + rpath = ecore_file_realpath(theme); > if (!rpath) > return NULL; ecore_file_realpath always allocate a string, even when realpath would return an error (exception: when there's an out of memory condition). In this case you need to check whether the returned string is empty. > Tools/EWebLauncher/main.c:888 > + return quit(EINA_FALSE, "ERROR: could not created tmp directory.\n"); s/created/create/
Tomasz Morawski
Comment 3 2011-05-09 05:53:16 PDT
Created attachment 92784 [details] Fixed patch
Lucas De Marchi
Comment 4 2011-05-09 16:30:01 PDT
Comment on attachment 92784 [details] Fixed patch View in context: https://bugs.webkit.org/attachment.cgi?id=92784&action=review > Tools/EWebLauncher/main.c:800 > - rpath = realpath(theme, NULL); > - if (!rpath) > - return NULL; > - > - if (stat(rpath, &st)) { > + rpath = ecore_file_realpath("/etc"); /etc ???? Why? Maybe you used as a test and let it here?
Tomasz Morawski
Comment 5 2011-05-09 22:55:28 PDT
Created attachment 92923 [details] Patch 3
Raphael Kubo da Costa (:rakuco)
Comment 6 2011-05-10 14:06:46 PDT
It looks OK to me, informal r+ from my side.
Ryuan Choi
Comment 7 2011-05-10 21:50:17 PDT
rpath is not a parameter of ecore_file_realpath, right? rpath = ecore_file_realpath(theme);
Tomasz Morawski
Comment 8 2011-05-11 01:05:11 PDT
Created attachment 93084 [details] Patch 4
Lucas De Marchi
Comment 9 2011-05-11 05:25:21 PDT
(In reply to comment #7) > rpath is not a parameter of ecore_file_realpath, right? Right. Tomasz, we can't apply every patch and test when reviewing. Please, test your changes to see if it really fixes the issue before uploading a new patch. Now it looks good.
WebKit Commit Bot
Comment 10 2011-05-12 09:03:29 PDT
Comment on attachment 93084 [details] Patch 4 Clearing flags on attachment: 93084 Committed r86349: <http://trac.webkit.org/changeset/86349>
WebKit Commit Bot
Comment 11 2011-05-12 09:03:35 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 12 2011-05-12 10:38:53 PDT
http://trac.webkit.org/changeset/86349 might have broken GTK Linux 32-bit Release
Note You need to log in before you can comment on or make changes to this bug.