2011-05-12  Tomasz Morawski  <t.morawski@samsung.com>

Reviewed by Antonio Gomes.

        [EFL] Added initialization/shutdown for ecore_file library
        https://bugs.webkit.org/show_bug.cgi?id=60457

        Added initialization and shuthown for ecore_file library and replaced
        realpath function to ecore_file_realpath.

        * EWebLauncher/main.c:
        (quit):
        (findThemePath):
        (main):

Canonical link: https://commits.webkit.org/76006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86349 268f45cc-cd09-0410-ab3c-d52691b4dbfc